--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 gensim>=4.3.0,<5.0.0
-pandas>=1.5.0,<3.0.0
-numpy>=1.21.0,<2.0.0
+pandas==2.2.2, <3.0.0
+numpy>=2.0.0,<3.0.0
 matplotlib>=3.5.0,<4.0.0
 nltk>=3.6.0,<4.0.0
 scikit-learn>=1.1.0,<2.0.0
